feat: agregar sección de productos para bebés

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h1>SOKA Technologies</h1>
     <nav>
       <a href="#servicios">Servicios</a>
+      <a href="#bebes">Bebés</a>
       <a href="#nosotros">Sobre Nosotros</a>
       <a href="#contacto">Contacto</a>
     </nav>
@@ -37,6 +38,20 @@
       <li>💡 Desarrollo de Aplicaciones a Medida</li>
       <li>⚙️ Automatización de Procesos Empresariales</li>
     </ul>
+  </section>
+
+  <section id="bebes" class="fade-in">
+    <h2>Bebés</h2>
+    <div class="product-grid">
+      <article class="product-card">
+        <h3>Pañales ecológicos</h3>
+        <p>Suaves, reutilizables y amigables con el medio ambiente.</p>
+      </article>
+      <article class="product-card">
+        <h3>Manta para bebé</h3>
+        <p>Manta de algodón 100% hipoalergénica.</p>
+      </article>
+    </div>
   </section>
 
   <section id="nosotros" class="fade-in">
